Add core structure for main page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <meta name="keywords" content="rock, scissors, paper, lizard, spock">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
-    <h1>test</h1>
+    <!-- The Game Area -->
+    <section id="game-area"></section>
+
+    <!-- The About Modal Section -->
+    <div id="aboutModal"></div>
+
+    <!-- The Win Modal Section -->
+    <div id="winModal"></div>
+
+    <!-- The Lose Modal Section -->
+    <div id="loseModal"></div>
+
+    <footer>Contact Links</footer>
+
 </body>
 </html>
