Add header and text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
     <!-- The Game Area -->
-    <section id="game-area"></section>
+    <section id="game-area">
+        <header>
+            <h1>Spock - Lizzard - Rock - Paper - Sissors</h1>
+        </header>
+    </section>
 
     <!-- The About Modal Section -->
     <div id="aboutModal"></div>
