--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
         <header>
             <h1>Spock - Lizzard - Rock - Paper - Sissors</h1>
         </header>
+
+        <div class="game-image">
+            <h2>Player Choice:</h2>
+            <img id="user-choice" class="user-image" src="assets/images/lizard.png"
+                alt="Rock Paper Scissors Lizard Spock">
+        </div>
+        <div class="game-image">
+            <h2>Computer Choice:</h2>
+            <img id="computer-choice" class="computer-image" src="assets/images/spock.png"
+                alt="Rock Paper Scissors Lizard Spock">
+        </div>
+
+        <h2>Result: <span id="result"></span></h2>
+
+        <h2>Final Result: <span id="final"></span></h2>
     </section>
 
     <!-- The About Modal Section -->
