Add user game buttons to game area

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         </div>
 
         <h2>Result: <span id="result"></span></h2>
-
         <h2>Final Result: <span id="final"></span></h2>
+
+        <button aria-label="Rock" class="btn" id="rock">Rock</button>
+        <button aria-label="Paper" class="btn" id="paper">Paper</button>
+        <button aria-label="Scissors" class="btn" id="scissors">Scissors</button>
+        <button aria-label="Spock" class="btn" id="spock">Spock</button>
+        <button aria-label="Lizard" class="btn" id="lizard">Lizard</button>
     </section>
 
     <!-- The About Modal Section -->
