Add footer styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- The Lose Modal Section -->
     <div id="loseModal"></div>
 
-    <!-- <footer>Contact Links</footer> -->
+    <footer>Contact Links</footer>
 
 </body>
 
