Add script.js to index.html and tested

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- The Game Area -->
     <section id="game-area">
         <header>
-            <h1>Spock - Lizzard - Rock - Paper - Sissors</h1>
+            <h1>Spock  Lizzard  Rock  Paper  Sissors</h1>
         </header>
 
         <div class="game-image">
@@ -56,7 +56,7 @@
     <div id="loseModal"></div>
 
     <footer>Contact Links</footer>
-
+<script src="assets/js/script.js"></script>
 </body>
 
 </html>
