feat: Add 'about modal' to html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- The Game Area -->
     <section id="game-area">
         <header>
-            <h1>Spock  Lizzard  Rock  Paper  Sissors</h1>
+            <h1>Spock Lizzard Rock Paper Sissors</h1>
         </header>
 
         <div class="game-image">
@@ -44,10 +44,30 @@
         <!-- Player and Conputer Scores -->
         <h2>Player Score: <span id="user-score">0</span></h2>
         <h2>Computer Score: <span id="computer-score">0</span></h2>
+
+        <!-- About modal button -->
+        <div class="modal-btn" id="myBtn">About</div>
     </section>
 
     <!-- The About Modal Section -->
-    <div id="aboutModal"></div>
+    <div id="aboutModal" class="modal">
+
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>About</h3>
+            <p>Scissors Cuts Paper</p>
+            <p>Scissors Decapitates Lizard.</p>
+            <p>Paper Covers Rock</p>
+            <p>Paper Disproves of Spock</p>
+            <p>Rock Crushes Lizard</p>
+            <p>Rock Crushes Scissors</p>
+            <p>Lizard Poisons Spock</p>
+            <p>Lizard Eats Paper</p>
+            <p>Spock Vaporises Rock</p>
+            <p>Spock Smashes Scissors</p>
+        </div>
+
+    </div>
 
     <!-- The Win Modal Section -->
     <div id="winModal"></div>
@@ -56,7 +76,7 @@
     <div id="loseModal"></div>
 
     <footer>Contact Links</footer>
-<script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
