--- a/index.html
+++ b/index.html
@@ -69,11 +69,24 @@
 
     </div>
 
-    <!-- The Win Modal Section -->
-    <div id="winModal"></div>
+       <!-- Win/Lose modal-container -->
+       <div id="winModal" class="modal">
 
-    <!-- The Lose Modal Section -->
-    <div id="loseModal"></div>
+        <div class="modal-content winner">
+            <h3>You are victorious</h3>
+            <p>Game will restart in <span id="timer">5</span> seconds</p>
+        </div>
+
+    </div>
+
+    <div id="loseModal" class="modal">
+
+        <div class="modal-content loser">
+            <h3>You Lose</h3>
+            <p>Game will restart in <span id="timer2">5</span> seconds</p>
+        </div>
+
+    </div>
 
     <footer>Contact Links</footer>
     <script src="assets/js/script.js"></script>
