feat: add automatic restart timer in endGame function

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="modal-content winner">
             <h3>You are victorious</h3>
-            <p>Game will restart in <span id="timer">5</span> seconds</p>
+            <p>Game will restart in <span id="win-timer">5</span> seconds</p>
         </div>
 
     </div>
@@ -83,7 +83,7 @@
 
         <div class="modal-content loser">
             <h3>You Lose</h3>
-            <p>Game will restart in <span id="timer2">5</span> seconds</p>
+            <p>Game will restart in <span id="lose-timer">5</span> seconds</p>
         </div>
 
     </div>
