style: edit button style

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>Result: <span id="result"></span></h2>
         <h2>Final Result: <span id="final"></span></h2>
 
-        <!-- Button for the user to choose -->
+        <!-- Buttons for the user to choose -->
         <button aria-label="Rock" class="btn" id="rock">Rock</button>
         <button aria-label="Paper" class="btn" id="paper">Paper</button>
         <button aria-label="Scissors" class="btn" id="scissors">Scissors</button>
@@ -69,7 +69,7 @@
 
     </div>
 
-       <!-- Win/Lose modal-container -->
+       <!-- Win/Lose modal-containers -->
        <div id="winModal" class="modal">
 
         <div class="modal-content winner">
