feat: add 'instructions' in html and styles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         <h2>Computer Score: <span id="computer-score">0</span></h2>
 
         <!-- About modal button -->
-        <div class="modal-btn" id="myBtn">About</div>
+        <div class="about-button" id="myBtn">About</div>
+        <div class="rules">
+            <p>Press any button to try and beat the computer<br>First to score 3 wins
+                <br>
+        </div>
     </section>
 
     <!-- The About Modal Section -->
@@ -54,7 +58,7 @@
 
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h3>About</h3>
+            <h3>About</h3>           
             <p>Scissors Cuts Paper</p>
             <p>Scissors Decapitates Lizard.</p>
             <p>Paper Covers Rock</p>
