feat: add 'contact' new html and style (freefrontend.com)

--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
         <!-- About modal button -->
         <div class="about-button" id="myBtn">About</div>
         <div class="rules">
-            <p>Press any button to try and beat the computer<br>First to score 3 wins
-                <br>
+            <p>Press any button to try and beat the computer</p>
+            <p class="bottom">First to score 3 wins</p><br>
         </div>
+        <!-- <footer> -->
+        <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US" target="_blank"><i
+                    class="fa-solid fa-envelope"></i></a>
+        </p>
+        <!-- </footer> -->
     </section>
 
     <!-- The About Modal Section -->
@@ -58,7 +63,7 @@
 
         <div class="modal-content">
             <span class="close">&times;</span>
-            <h3>About</h3>           
+            <h3>About</h3>
             <p>Scissors Cuts Paper</p>
             <p>Scissors Decapitates Lizard.</p>
             <p>Paper Covers Rock</p>
@@ -73,8 +78,8 @@
 
     </div>
 
-       <!-- Win/Lose modal-containers -->
-       <div id="winModal" class="modal">
+    <!-- Win/Lose modal-containers -->
+    <div id="winModal" class="modal">
 
         <div class="modal-content winner">
             <h3>You are victorious</h3>
@@ -93,6 +98,7 @@
     </div>
 
     <footer>Contact Links</footer>
+    <script src="https://kit.fontawesome.com/e20faa96b4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
