fix: comment out code when test

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <h2>Computer Score: <span id="computer-score">0</span></h2>
 
         <!-- About modal button -->
-        <div class="about-button" id="myBtn">About</div>
+        <!-- <div class="about-button" id="myBtn">About</div>
         <div class="rules">
-            <p>Press any button to try and beat the computer</p>
+            <p class="bottom">Press any button to try and beat the computer</p>
             <p class="bottom">First to score 3 wins</p><br>
-        </div>
+        </div> -->
         <!-- <footer> -->
-        <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US" target="_blank"><i
+        <!-- <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US" target="_blank"><i
                     class="fa-solid fa-envelope"></i></a>
-        </p>
+        </p> -->
         <!-- </footer> -->
     </section>
 
