--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <h2>Computer Score: <span id="computer-score">0</span></h2>
 
         <!-- About modal button -->
-        <!-- <div class="about-button" id="myBtn">About</div>
+        <div class="about-button" id="myBtn">About</div>
         <div class="rules">
             <p class="bottom">Press any button to try and beat the computer</p>
             <p class="bottom">First to score 3 wins</p><br>
-        </div> -->
+        </div>
         <!-- <footer> -->
         <!-- <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US" target="_blank"><i
                     class="fa-solid fa-envelope"></i></a>
@@ -97,7 +97,11 @@
 
     </div>
 
-    <footer>Contact Links</footer>
+    <footer>
+        <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US"
+                target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        </p>
+    </footer>
     <script src="https://kit.fontawesome.com/e20faa96b4.js" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
 </body>
