docs: add a README.md file

--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@
         <div class="rules">
             <p class="bottom">Press any button to try and beat the computer</p>
             <p class="bottom">First to score 3 wins</p><br>
-        </div>
-        <!-- <footer> -->
-        <!-- <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US" target="_blank"><i
-                    class="fa-solid fa-envelope"></i></a>
-        </p> -->
-        <!-- </footer> -->
+        </div>      
     </section>
 
     <!-- The About Modal Section -->
@@ -97,6 +92,7 @@
 
     </div>
 
+    <!-- How to contact site owner -->
     <footer>
         <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US"
                 target="_blank"><i class="fa-solid fa-envelope"></i></a>
