fix: remove 'final result' heading from smaller displays

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- The results (current and final) -->
         <h2>Result: <span id="result"></span></h2>
-        <h2>Final Result: <span id="final"></span></h2>
+        <h2 class="hide-result">Final Result: <span id="final"></span></h2>
 
         <!-- Buttons for the user to choose -->
         <button aria-label="Rock" class="btn" id="rock">Rock</button>
