--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rock Scissors Paper Lizard Spock game of chance">
     <meta name="keywords" content="rock, scissors, paper, lizard, spock">
-    <link rel="icon" type="image/png" sizes="16*16" href="assets/images/trek.png">
+    <link rel="icon" type="image/png" href="assets/images/trek.png">
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 
