--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- The Game Area -->
     <section id="game-area">
         <header>
-            <h1>Spock Lizzard Rock Paper Sissors</h1>
+            <h1>Spock Lizard Rock Paper Scissors</h1>
         </header>
 
         <div class="game-image">
