feat: add sound on/off div

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
         <!-- About modal button -->
         <div class="about-button" id="myBtn">About</div>
+
+        <!-- Sound on/off button -->
+        <div class="mute" id="mute"><i class="fa-solid fa-music"></i></div>
+
         <div class="rules">
             <p class="bottom">Press any button to try and beat the computer</p>
             <p class="bottom">First to score 3 wins</p><br>
