feat: add new contact page and styles

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- How to contact site owner -->
     <footer>
-        <p class="footer bottom">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US"
+        <p class="contact">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US"
                 target="_blank"><i class="fa-solid fa-envelope"></i></a>
         </p>
     </footer>
