--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,19 @@
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
-    <div id="signup">
-        <form method="POST" action="https://formdump.codeinstitute.net/" class="form-section">
-            <h2>Contact Us</h2>
-            <input name="name" type="text" class="feedback-input" placeholder="Name" required />   
-            <input name="email" type="text" class="feedback-input" placeholder="Email" required/>
-            <textarea name="message" class="feedback-input" placeholder="Comment" required></textarea>
-            <input type="submit" value="SUBMIT"/>
-        </form>
-    </div>
+    <section class="signup-container">
+        <div id="signup">
+            <form method="POST" action="https://formdump.codeinstitute.net/" class="form-section">
+                <h2>Contact US</h2>
+                <label for="fname">Name:</label>
+                <input type="text" id="fname" name="user_name" required>
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" name="email_address" required>
+                <textarea type="text" name="message" class="feedback-input" placeholder="Comment..."
+                    required></textarea>
+                <button type="submit">Sign Up</button>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
