refactor: realign code indents in index.html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="rock, scissors, paper, lizard, spock">
     <link rel="icon" type="image/png" href="assets/images/trek.png">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 
@@ -55,7 +55,7 @@
         <div class="rules">
             <p class="bottom">Press any button to try and beat the computer</p>
             <p class="bottom">First to score 3 wins</p><br>
-        </div>      
+        </div>
     </section>
 
     <!-- The About Modal Section -->
@@ -99,8 +99,8 @@
 
     <!-- How to contact site owner -->
     <footer>
-        <p class="contact">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US"
-                target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        <p class="contact">Contact Us <a href="contact.html" rel="noopener" aria-label="Contact US" target="_blank"><i
+                    class="fa-solid fa-envelope"></i></a>
         </p>
     </footer>
     <script src="https://kit.fontawesome.com/e20faa96b4.js" crossorigin="anonymous"></script>
